--- a/2021-07-20/.vscode/launch.json
+++ b/2021-07-20/.vscode/launch.json
@@ -4,12 +4,23 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
-            "name": "Launch Package",
+            "name": "LaunchGo",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${fileDirname}"
+            "remotePath": "",
+            "port": 8000,
+            "host": "127.0.0.1",
+            "program": "${fileDirname}",
+            "env": {
+                "GOPATH": "/Users/jitengjiao/go",
+                "GOROOT": "/usr/local/go",
+                "GO111MODULE":"off"
+            },
+            "args": [],
+            //"showLog": true
         }
     ]
 }
